2002-11-19  David Hyatt  <hyatt@apple.com>

	Make sure that if the scrollers are shown/hidden that we
	force an immediate layout, since if we don't, an intervening
	display can cause us to show scrollbars when they really
	shouldn't be there.
	
        * WebView.subproj/WebDynamicScrollBarsView.m:
        (-[WebDynamicScrollBarsView updateScrollers]):

2002-11-19  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3100597 - repro NSArray exception using contextual menu

        * Misc.subproj/WebNSPasteboardExtras.m:
        (-[NSPasteboard _web_writeURL:andTitle:withOwner:]): more error checking

2002-11-19  Trey Matteson  <trey@apple.com>

	Just a tweak to the description printout.

        * History.subproj/WebHistoryItem.m:
        (-[WebHistoryItem description]):

2002-11-18  Chris Blumenberg  <cblu@apple.com>

	Real fix for: 3104183 - Assert loading www.louisvuitton.com

	Since we don't consider plug-in content as a subresource, attaching plug-in streams to the datasource has no affect on the loading state of the datasource. Both stopLoading on WebFrame and _stopLoading datasource, would not stop plug-ins streams after the data source was done loading. Because of this, I've decided to not keep a list of plug-in streams attached to the data source and pulled my previous change. To fix this bug, WebBaseResourceHandleDelegate now retains the controller.

        * Plugins.subproj/WebNetscapePluginStream.m:
        (-[WebNetscapePluginStream start]):
        (-[WebNetscapePluginStream cancel]):
        (-[WebNetscapePluginStream handleDidFinishLoading:]):
        (-[WebNetscapePluginStream handle:didFailLoadingWithError:]):
        * WebView.subproj/WebBaseResourceHandleDelegate.h:
        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate _releaseResources]):
        (-[WebBaseResourceHandleDelegate setDataSource:]):
        (-[WebBaseResourceHandleDelegate handle:willSendRequest:]):