@@ -42,6 +42,21 @@
     return lastFindWasSuccessful;
 }
 
+- (void)copy:(id)sender
+{
+    if ([self isRichText]) {
+        [super copy:sender];
+    }else{
+        //Convert CRLF to LF to workaround: 3105538 - Carbon doesn't convert text with CRLF to LF
+        NSMutableString *string = [[self string] mutableCopy];
+        [string replaceOccurrencesOfString:@"\r\n" withString:@"\n" options:0 range:NSMakeRange(0, [string length])];
+
+        NSPasteboard *pasteboard = [NSPasteboard generalPasteboard];
+        [pasteboard declareTypes:[NSArray arrayWithObject:NSStringPboardType] owner:self];
+        [pasteboard setString:string forType:NSStringPboardType];
+    }
+}
+
 @end
 
 @implementation NSString (_Web_StringTextFinding)
